// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Network Router Interfaces Form Component should add interface 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--select"
      >
        <label
          class="cds--label"
          dir="auto"
          for="interface"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Remove Interface
        </label>
        <div
          class="cds--select-input__wrapper"
        >
          <select
            class="cds--select-input"
            id="interface"
            name="interface"
            title="<Choose>"
          >
            <option
              class="cds--select-option"
              label="<Choose>"
              value=""
            >
              &lt;Choose&gt;
            </option>
            <option
              class="cds--select-option"
              label="pat-subnwt"
              value="148"
            >
              pat-subnwt
            </option>
            <option
              class="cds--select-option"
              label="ext-sub"
              value="50"
            >
              ext-sub
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="cds--select__arrow"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary cds--btn--disabled"
        disabled=""
        type="button"
      >
        Reset
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Network Router Interfaces Form Component should remove interface 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--select"
      >
        <label
          class="cds--label"
          dir="auto"
          for="interface"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Remove Interface
        </label>
        <div
          class="cds--select-input__wrapper"
        >
          <select
            class="cds--select-input"
            id="interface"
            name="interface"
            title="<Choose>"
          >
            <option
              class="cds--select-option"
              label="<Choose>"
              value=""
            >
              &lt;Choose&gt;
            </option>
            <option
              class="cds--select-option"
              label="pat-subnwt"
              value="148"
            >
              pat-subnwt
            </option>
            <option
              class="cds--select-option"
              label="ext-sub"
              value="50"
            >
              ext-sub
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="cds--select__arrow"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary cds--btn--disabled"
        disabled=""
        type="button"
      >
        Reset
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Network Router Interfaces Form Component should render add interface form 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--select"
      >
        <label
          class="cds--label"
          dir="auto"
          for="interface"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Add Interface
        </label>
        <div
          class="cds--select-input__wrapper"
        >
          <select
            class="cds--select-input"
            id="interface"
            name="interface"
            title="<Choose>"
          >
            <option
              class="cds--select-option"
              label="<Choose>"
              value=""
            >
              &lt;Choose&gt;
            </option>
            <option
              class="cds--select-option"
              label="pat-subnwt"
              value="148"
            >
              pat-subnwt
            </option>
            <option
              class="cds--select-option"
              label="ext-sub"
              value="50"
            >
              ext-sub
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="cds--select__arrow"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary cds--btn--disabled"
        disabled=""
        type="button"
      >
        Reset
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Network Router Interfaces Form Component should render remove interface form 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--select"
      >
        <label
          class="cds--label"
          dir="auto"
          for="interface"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Remove Interface
        </label>
        <div
          class="cds--select-input__wrapper"
        >
          <select
            class="cds--select-input"
            id="interface"
            name="interface"
            title="<Choose>"
          >
            <option
              class="cds--select-option"
              label="<Choose>"
              value=""
            >
              &lt;Choose&gt;
            </option>
            <option
              class="cds--select-option"
              label="pat-subnwt"
              value="148"
            >
              pat-subnwt
            </option>
            <option
              class="cds--select-option"
              label="ext-sub"
              value="50"
            >
              ext-sub
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="cds--select__arrow"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary cds--btn--disabled"
        disabled=""
        type="button"
      >
        Reset
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;
